--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 DATABASE_URL="postgresql://neondb_owner:UFX5VWf6oTvq@ep-autumn-bonus-a51kbm7f.us-east-2.aws.neon.tech/neondb?sslmode=require"
+
+#Clerk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Ymxlc3NlZC1oeWVuYS05NC5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_ywKRJ1QTrTJ03Ipzf3UW9ztdbU4UtWqrSTwInt2jvr
